--- a/style.css
+++ b/style.css
@@ -102,6 +102,14 @@ body{
     width: 50%;
     margin: 0 auto;
 }
+label{
+    font-size: 20px;
+}
+.checkbox{
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+}
 
 @media screen and (min-width: 768px) {
     .parametro-coluna__senha{
